# patcherex

./: .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  DEFCON.md  README.md  get_lfs_files.sh  install_deps.sh  pyproject.toml  requirements.txt  setup.py  sync.sh  testing_setup.txt
backdoor_stuff/: README.md  backdoor_pov  backdoor_pov.c  backdoor_pov.pov  backdoor_solutions_creator.py  build.sh  compile.sh  compute_hash.py  sha1block.c  sha1block.py
ida_plugin/: forms.py  main.py  patcherex_ida_main.py
old_stuff/: Fortifier.py  fortify.py  utils.py
patcherex/: __init__.py  backend.py  canary_patcher.py  cfg_utils.py  errors.py  file_sizes.py  networkrules.py  patch_master.py  patcherex  patcherex.py  patches.py  result_summary.py  sync.sh  technique.py  utils.py
test_binaries/: .gdb_history  0b32aa01_01_2  CADET_00003  CROMU_00008  CROMU_00034  CROMU_00044  CROMU_00070  CROMU_00071  KPRCA_00009  KPRCA_00019  KPRCA_00025  KPRCA_00034  KPRCA_00044  KPRCA_00046  NRFIN_00004  NRFIN_00073  NRFIN_00078  PIZZA_00002  countdown_test  hello  hello.c  md5sum  rip-relative-addressing.out
tests/: aarch64.py  arm.py  disabled-test_uniquelabels.py  disabled_test_patch_master.py  large_scale.py  test_backend.py  test_cfg.py  test_detourbackend.py  test_detourbackend_aarch64.py  test_detourbackend_arm.py  test_detourbackend_i386.py  test_detourbackend_mips.py  test_detourbackend_mips64.py  test_detourbackend_ppc.py  test_detourbackend_ppc64.py  test_detourbackend_x86-64.py  test_detourbackend_x86_64.py  test_inline.py  test_newdetourbackend.py  test_patch_master.py  (+6 more)
(+167 files in other folders)
